--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "techdepproject1",
+  "homepage": "https://ytkameme.github.io/techdepproject1",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://YtkaMEME.github.io/techdepproject1",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -14,9 +14,9 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
+    "predeploy":"npm run build",
+    "deploy":"gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -33,11 +33,7 @@
       "not dead",
       "not op_mini all"
     ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+    "development": []
   },
   "devDependencies": {
     "gh-pages": "^5.0.0"
