--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
     "react-use": "^17.4.0",
+    "redux-saga": "^1.2.3",
     "sass": "^1.62.1",
     "web-vitals": "^2.1.4"
   },
